--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,20 @@
 name: CI
 on:
-    push:
-        branches: [main]
-    pull_request:
-        types: [opened, synchronize]
+  push:
+    branches: [main]
+  pull_request:
+    types: [opened, synchronize]
 
 concurrency:
-    group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
-    cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
+  cancel-in-progress: true
+
+env:
+  CACHE: clemenscodes
+  DEV_PROFILE: webserver-dev-profile
 
 jobs:
-  tests:
+  magic-nix-cache:
     runs-on: ubuntu-latest
     permissions:
       id-token: "write"
@@ -20,7 +24,31 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: DeterminateSystems/flake-checker-action@main
-      - name: Run `nix develop`
-        run: nix develop
       - name: Run `nix build`
         run: nix build
+  cachix:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v25
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+      - uses: cachix/cachix-action@v14
+        with:
+          name: ${{ env.CACHE }}
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      - name: Cache flake inputs
+        run: |
+          nix flake archive --json \
+            | jq -r '.path,(.inputs|to_entries[].value.path)' \
+            | cachix push ${{ env.CACHE }}
+      - name: Cache development shell
+        run: |
+          nix develop --profile ${{ env.DEV_PROFILE }} -c true
+          cachix push ${{ env.CACHE }} ${{ env.DEV_PROFILE }}
+      - name: Cache runtime closures
+        run: |
+          nix build --json \
+            | jq -r '.[].outputs | to_entries[].value' \
+            | cachix push ${{ env.CACHE }}
+
