--- a/.github/workflows/nix-cachix.yml
+++ b/.github/workflows/nix-cachix.yml
@@ -9,17 +9,34 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
   cancel-in-progress: true
 
+env:
+  NIX_CACHE: clemenscodes
+  NIX_DEV_PROFILE: webserver-dev-profile
+
 jobs:
-  magic-nix-cache:
+  cachix:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: "write"
-      contents: "read"
     steps:
       - uses: actions/checkout@v4
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-      - uses: DeterminateSystems/flake-checker-action@main
-      - name: Run `nix build --accept-flake-config`
-        run: nix build --accept-flake-config
+      - uses: cachix/install-nix-action@v25
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+      - uses: cachix/cachix-action@v14
+        with:
+          name: ${{ env.NIX_CACHE }}
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      - name: Cache flake inputs
+        run: |
+          nix flake archive --json \
+            | jq -r '.path,(.inputs|to_entries[].value.path)' \
+            | cachix push ${{ env.NIX_CACHE }}
+      - name: Cache development shell
+        run: |
+          nix develop --accept-flake-config --profile ${{ env.NIX_DEV_PROFILE }} -c true
+          cachix push ${{ env.NIX_CACHE }} ${{ env.NIX_DEV_PROFILE }}
+      - name: Cache runtime closures
+        run: |
+          nix build --accept-flake-config --json \
+            | jq -r '.[].outputs | to_entries[].value' \
+            | cachix push ${{ env.NIX_CACHE }}
 
