chore(ci): update src, nix-gha-cache without cachix

--- a/.github/workflows/nix-gha-cache.yml
+++ b/.github/workflows/nix-gha-cache.yml
@@ -20,6 +20,6 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: DeterminateSystems/flake-checker-action@main
-      - name: Run `nix build --accept-flake-config`
-        run: nix build --accept-flake-config
+      - name: Run `nix build`
+        run: nix build
 
